Revision history for Yakuake::Sessions

0.11.1    2013-11-23 13:09:24
          - Dropped MooX::Options
          - Updated git hooks

0.10.3    2013-11-23 01:12:23
          - Fixed metadata after switch to DZ

0.9.1     2013-08-15 23:33:26
          - Switched to Dist::Zilla

0.8.1     2013-08-07 18:49:48
          - Reset min perl testing to original behaviour

0.7.5     2013-07-30 14:33:25
          - New method for CPANTesting min Perl ver
          - Added fremen and frogman to tier gruber
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Bumped dependency on File::DataClass
          - Close session kills forground process
          - Now uses Net::DBus

0.6.10    2013-07-06 19:26:36
          - Split out ::TraitFor::DBus
          - Rewrote _apply_sessions
          - Added POD method abstracts
          - Fixed bug in set tab title for project
          - Now use TTYs to number tab titles
          - Mooified

0.5.5     2013-05-29 14:14:11
          - Made not found error appear on load
          - Bumped Class::Usul version
          - Renamed C::U::Functions::say to emit
          - Updated prereqs in Build.PL
          - Split into base class plus traits

0.4.3     2013-05-04 23:46:16
          - Split out Config class
          - Updated POD
          - Moved edit_project command to Module::Provision
          - Improved performan of yakuake_session_tt_cd

0.3.5     2013-04-30 14:24:14
          - Update inc::Bob to v1.13
          - Updated POD
          - Bumped version numbers of C:U and F:DC
          - Stopped Treptow CPAN Testing - 7ec294fe-b005-11e2-91e1-3039f74438b4
          - Updated POD
          - Updated POD

0.2.8     2013-04-22 19:55:10
          - Fixed version number in yakuake_session
          - Author tests now detect using env variable
          - Improved synopsis