@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-11-22 19:02 pjf ;
+; @(#)$Ident: dist.ini 2013-11-25 21:53 pjf ;
 
 name              = Yakuake-Sessions
 abstract          = Session Manager for the Yakuake Terminal Emulator
@@ -23,9 +23,6 @@ Module::Build     = 0.4004
 version           = 0.88
 Module::Build     = 0.4004
 
-[MarkdownInRoot::WithMetaLinks]
-filename          = README.md
-
 [Meta::Dynamic::Config]
 
 [MetaNoIndex]
@@ -46,6 +43,11 @@ bugtracker.mailto = bug-Yakuake-Sessions@rt.cpan.org
 repository.url    = git://github.com/pjfl/p5-yakuake-sessions.git
 repository.web    = http://github.com/pjfl/p5-yakuake-sessions
 repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
