@@ -1,5 +1,8 @@
 Revision history for Yakuake::Sessions
 
+          - Dropped DZ::P::MarkdownInRoot from dist.ini
+          - Added select option
+
 0.11.1    2013-11-23 13:09:24
           - Dropped MooX::Options
           - Updated git hooks
